# ChangeLog for dev-python/gmpy
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/gmpy/ChangeLog,v 1.40 2014/01/27 14:10:21 hattya Exp $

  27 Jan 2014; Akinori Hattori <hattya@gentoo.org> gmpy-2.0.3.ebuild:
  keyword ~ia64 wrt bug #495120

*gmpy-2.0.3 (23 Dec 2013)
*gmpy-1.17 (23 Dec 2013)

  23 Dec 2013; Justin Lecher <jlec@gentoo.org> +gmpy-1.17.ebuild,
  gmpy-2.0.0.ebuild, +gmpy-2.0.3.ebuild, metadata.xml:
  Version BUmp; Bump to distutils-r1

  07 Aug 2013; Agostino Sarubbo <ago@gentoo.org> gmpy-2.0.0.ebuild:
  Stable for x86, wrt bug #474182

  24 Jul 2013; Agostino Sarubbo <ago@gentoo.org> gmpy-2.0.0.ebuild:
  Stable for amd64, wrt bug #474182

  22 Jul 2013; Dirkjan Ochtman <djc@gentoo.org> metadata.xml:
  Add python herd.

  21 Jul 2013; Pacho Ramos <pacho@gentoo.org> -gmpy-1.14.ebuild,
  -gmpy-1.15.ebuild, metadata.xml:
  Cleanup due #92799

*gmpy-2.0.0 (14 May 2013)

  14 May 2013; Justin Lecher <jlec@gentoo.org> +gmpy-2.0.0.ebuild,
  metadata.xml:
  Version Bump, #412635

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gmpy-1.16.ebuild:
  Stable for x86, wrt bug #457326

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gmpy-1.16.ebuild:
  Stable for amd64, wrt bug #457326

*gmpy-1.16 (11 Jan 2013)

  11 Jan 2013; Patrick Lauer <patrick@gentoo.org> +gmpy-1.16.ebuild:
  Bump for #451232

*gmpy-1.15 (17 Aug 2012)

  17 Aug 2012; Patrick Lauer <patrick@gentoo.org> +gmpy-1.15.ebuild:
  Bump for #425660

  20 Feb 2012; Patrick Lauer <patrick@gentoo.org> gmpy-1.14.ebuild:
  Restricting pypy #404031

  25 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  gmpy-1.14.ebuild:
  Disable pysymbolicext extension (bug #298244).

  11 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -gmpy-1.13.ebuild:
  Delete.

  11 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> gmpy-1.14.ebuild:
  x86 stable wrt bug #350862
